first routes with ejs template

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,8 +15,7 @@
   </head>
   <body>
     <div class="container">
-        <h1>Youpi</h1>
-        <p>Bla bli blou</p>
+        <%- body %>
     </div>
     <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
     <!-- // <script src="/socket.io/socket.io.js"></script> -->
