--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,24 +4,28 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Last Straw</title>
-    <meta name="description" content="" />
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/mobile.css">
-        <link rel="stylesheet" href="css/main.css">
+        <% include partials/head %>
   </head>
   <body>
-    <div class="container">
+
+    <header>
+        <% include partials/header %>
+    </header>
+
+    <main>
+        <hr/>
         <%- body %>
-    </div>
+        <hr/>
+    </main>
+
+    <footer>
+        <% include partials/footer %>
+    </footer>
+
     <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
     <!-- // <script src="/socket.io/socket.io.js"></script> -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendors/jquery-1.9.1.min.js"><\/script>')</script>
-    <script src="js/mustache.js"></script>
-    <script src="appclient.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
