socket on local to heroku

--- a/templates/partials/header.ejs
+++ b/templates/partials/header.ejs
@@ -1,6 +1,6 @@
 <nav>
     <ul>
-        <% menu.forEach(function(item) { %>
+        <% data.forEach(function(item) { %>
             <li><a href="<%= item.href %>"><%= item.title %></a></li>
         <% }); %>
     </ul>
