--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,8 +22,8 @@
         <% include partials/footer %>
     </footer>
 
-    <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
-    <!-- // <script src="/socket.io/socket.io.js"></script> -->
+    <!-- // <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script> -->
+    <script src='/socket.io/socket.io.js'></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendors/jquery-1.9.1.min.js"><\/script>')</script>
     <script src="js/main.js"></script>
