add bootstrap css to templates

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,9 +60,39 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+html {
+  position: relative;
+  min-height: 100%;
+}
 
+body {
+  padding-top: 50px;
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+/*body > .container {
+  padding: 60px 15px 0;
+}*/
+.container .text-muted {
+  margin: 20px 0;
+}
 
+.last-straw-template {
+  padding: 40px 15px;
+  text-align: center;
+}
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+}
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
 
 /* ==========================================================================
    Helper classes
