--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,11 +12,14 @@
         <% include partials/header %>
     </header>
 
-    <main>
-        <hr/>
+    <div class="container">
+
+      <div class="last-straw-template">
         <%- body %>
-        <hr/>
-    </main>
+      </div>
+
+    </div>
+
 
     <footer>
         <% include partials/footer %>
@@ -26,6 +29,9 @@
     <script src='/socket.io/socket.io.js'></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendors/jquery-1.9.1.min.js"><\/script>')</script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="js/vendors/ie10-viewport-bug-workaround.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
