--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -1,1 +1,5 @@
-<p>© Copyright 2015 Last Straw</p>
+<footer class="footer navbar-inverse">
+  <div class="container">
+    <p class="text-muted credit">© Copyright 2015 Last Straw</p>
+  </div>
+</footer>
