--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,2 @@
 <h1>Home</h1>
+<p class="lead">An application illustrating the idiom "The straw that broke the camel's back" in real life context in collaboration..</p>
