--- a/templates/about.html
+++ b/templates/about.html
@@ -1,1 +1,14 @@
-<h1>It's me Mario</h1>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="well">
+                    <h3>Look I'm A Sidebar!</h3>
+                </div>
+            </div>
+            <div class="col-sm-8">
+
+                <div class="jumbotron">
+                    <h1>It's me Mario</h1>
+                    <p>Bla bli blou</p>
+                </div>
+            </div>
+        </div>
