--- a/templates/home.html
+++ b/templates/home.html
@@ -1,2 +1,35 @@
-<h1>Home</h1>
-<p class="lead">An application illustrating the idiom "The straw that broke the camel's back" in real life context in collaboration..</p>
+<h1><%= data.title %></h1>
+
+<div class="jumbotron">
+  <div class="container">
+    <p class="lead"><%= data.introduction_fr_FR %>
+        <img src="img/water.jpg" class="img-responsive" alt="C'est la goutte d'eau qui fait déborder le vase.">
+    </p>
+  </div>
+</div>
+
+<div class="jumbotron">
+  <div class="container start">
+    <h1>
+        <span class="glyphicon glyphicon-tint"></span>
+        Fais déborder le vase !
+        <span class="glyphicon glyphicon-tint"></span>
+    </h1>
+    <p>
+        <a class="btn btn-lg btn-info btn-default" href="/goutte-moi-ca" role="button">
+            C'est parti ma gueule !
+        </a>
+    </p>
+  </div>
+</div>
+
+
+
+
+
+
+<!--
+<p class="lead"><%= data.introduction_en_US %>
+    <img src="img/camel.jpg" class="img-responsive" alt="It is the last straw that breaks the camel's back">
+</p>
+-->
