--- a/templates/loginhome.html
+++ b/templates/loginhome.html
@@ -1,16 +1,30 @@
     <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span> Node Authentication</h1>
+        <h1><span class="glyphicon glyphicon-lock"></span> Authentication</h1>
 
         <p>Login or Register with:</p>
 
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
-        <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
-        <a href="/auth/twitter" class="btn btn-info"><span class="fa fa-twitter"></span> Twitter</a>
-        <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google+</a>
-    </div>
+        <a href="/login" class="btn btn-default btn-social">
+            <span class="fa fa-user"></span>
+            Local Login
+        </a>
 
-    <div class="text-center">
-        <p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
-        <p>Visit the <a href="http://scotch.io/tutorials/javascript/easy-node-authentication-setup-and-local">tutorial</a>.</p>
+        <a href="/signup" class="btn btn-default btn-social">
+            <span class="fa fa-user"></span>
+            Local Signup
+        </a>
+
+        <a href="/auth/facebook" class="btn btn-social btn-facebook">
+            <span class="fa fa-facebook"></span>
+            Facebook
+        </a>
+
+        <a href="/auth/twitter" class="btn btn-social btn-twitter">
+            <span class="fa fa-twitter"></span>
+            Twitter
+        </a>
+
+        <a href="/auth/google" class="btn btn-social btn-google-plus">
+            <span class="fa fa-google-plus"></span>
+            Google+
+        </a>
     </div>
