--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer navbar-inverse">
   <div class="container">
-    <p class="text-muted credit">© Copyright 2015 Last Straw</p>
+    <p class="text-muted credit"><%= layoutData.footer %></p>
   </div>
 </footer>
