--- a/templates/partials/head.ejs
+++ b/templates/partials/head.ejs
@@ -1,10 +1,12 @@
 <meta charset="utf-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1"><title>Last Straw</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"><title><%= layoutData.title %></title>
 <meta name="description" content="" />
 <link rel="stylesheet" href="css/normalize.min.css">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/mobile.css">
+<link rel="stylesheet" href="css/font-awesome.css">
+<link rel="stylesheet" href="css/bootstrap-social.css">
 <link rel="stylesheet" href="css/main.css">
 
 <!-- Latest compiled and minified CSS -->
