--- a/templates/loginhome.html
+++ b/templates/loginhome.html
@@ -1,3 +1,21 @@
+ <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '580371245438334',
+      xfbml      : true,
+      version    : 'v2.2'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+
     <div class="jumbotron text-center">
         <h1><span class="glyphicon glyphicon-lock"></span> Authentication</h1>
 
