--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,23 @@
         <% include partials/head %>
   </head>
   <body <%if (typeof data !== 'undefined' && typeof data.bodyClass !== 'undefined') {%>class="<%= data.bodyClass %>"<% } %>>
+    <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+          appId      : '580371245438334',
+          xfbml      : true,
+          version    : 'v2.2'
+        });
+      };
 
+      (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
     <header>
         <% include partials/header %>
     </header>
