--- a/templates/home.html
+++ b/templates/home.html
@@ -1,35 +1,19 @@
 <h1><%= data.title %></h1>
+<div class="row">
+    <div class="col-sm-4">
+        <div class="well">
+            <h1><span class="glyphicon glyphicon-tint"></span> Egouttez le trop plein</h1>
+            <p>Ne vous faites plus violence, égouttez-vous, ce vase est fait pour vous.</p>
+            <p>Ne soyez plus une poule mouillée, séchez-vous, débarassez-vous de cette goutte de trop qui vous mine</p>
+        </div>
+        <a class="btn btn-lg btn-default btn-enter" href="/goutte-moi-ca" role="button">Découvrir <span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div>
+    <div class="col-sm-8">
 
-<div class="jumbotron">
-  <div class="container">
-    <p class="lead"><%= data.introduction_fr_FR %>
-        <img src="img/water.jpg" class="img-responsive" alt="C'est la goutte d'eau qui fait déborder le vase.">
-    </p>
-  </div>
+        <div class="jumbotron">
+          <p class="lead"><%= data.introduction_fr_FR %>
+              <img src="img/water.jpg" class="img-responsive" alt="C'est la goutte d'eau qui fait déborder le vase.">
+          </p>
+        </div>
+    </div>
 </div>
-
-<div class="jumbotron">
-  <div class="container start">
-    <h1>
-        <span class="glyphicon glyphicon-tint"></span>
-        Fais déborder le vase !
-        <span class="glyphicon glyphicon-tint"></span>
-    </h1>
-    <p>
-        <a class="btn btn-lg btn-info btn-default" href="/goutte-moi-ca" role="button">
-            C'est parti ma gueule !
-        </a>
-    </p>
-  </div>
-</div>
-
-
-
-
-
-
-<!--
-<p class="lead"><%= data.introduction_en_US %>
-    <img src="img/camel.jpg" class="img-responsive" alt="It is the last straw that breaks the camel's back">
-</p>
--->
