redirect to profile page when user is logged and arriving on authentication page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,6 +92,13 @@ body {
   padding-bottom: 60px;
 }
 
+.last-straw-template .glyphicon-log-in {
+  vertical-align: top;
+}
+.last-straw-template .well {
+  word-break :break-all;
+}
+
 .last-straw-template .well h1 {
   text-align: left;
   font-size: 24px;
