--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
         <div class="well">
             <h1><span class="glyphicon glyphicon-tint"></span> Egouttez le trop plein</h1>
             <p>Ne vous faites plus violence, égouttez-vous, ce vase est fait pour vous.</p>
-            <p>Ne soyez plus une poule mouillée, séchez-vous, débarassez-vous de cette goutte de trop qui vous mine</p>
+            <p>Ne soyez plus une poule mouillée, séchez-vous, débarrassez-vous de cette goutte de trop qui vous mine</p>
         </div>
         <a class="btn btn-lg btn-default btn-enter" href="/goutte-moi-ca" role="button">Découvrir <span class="glyphicon glyphicon-chevron-right"></span></a>
     </div>
