--- a/templates/loginhome.html
+++ b/templates/loginhome.html
@@ -1,5 +1,5 @@
     <div class="jumbotron text-center">
-        <h1><span class="glyphicon glyphicon-lock"></span> Authentication</h1>
+        <h1><span class="glyphicon glyphicon-log-in"></span> Authentication</h1>
 
         <p>Login or Register with:</p>
 
