--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,14 @@
 
     <div class="page-header text-center">
-        <h1><span class="fa fa-anchor"></span> Profile Page</h1>
+        <h1><span class="glyphicon glyphicon-user"></span> Profile Page</h1>
         <a href="/logout" class="btn btn-default btn-sm">Logout</a>
+    </div>
+
+   <div class="jumbotron">
+      <p class="text-success">Tu es connecté(e) avec le ou les comptes suivant. Tu peux à tout moment les "unlinker" de cette appli sur cette page et te déconnecter.<br>
+        Aucune donnée perso n'est enregistrée ! <br/>
+        Maintenant tu peux vite aller voir l'application et t'en servir.
+      </p>
     </div>
 
     <div class="row">
@@ -10,7 +17,6 @@
         <div class="col-sm-6">
             <div class="well">
                 <h3><span class="fa fa-user"></span> Local</h3>
-
                 <% if (user.local.email) { %>
                     <p>
                         <strong>id</strong>: <%= user._id %><br>
@@ -51,6 +57,7 @@
     <div class="row">
 
         <!-- TWITTER INFORMATION -->
+        <!--
         <div class="col-sm-6">
             <div class="well">
                 <h3 class="text-info"><span class="fa fa-twitter"></span> Twitter</h3>
@@ -70,6 +77,7 @@
 
             </div>
         </div>
+        -->
 
         <!-- GOOGLE INFORMATION -->
         <div class="col-sm-6">
