--- a/public/css/main.css
+++ b/public/css/main.css
@@ -96,7 +96,7 @@ body {
   vertical-align: top;
 }
 .last-straw-template .well {
-  word-break :break-all;
+  word-break :break-word;
 }
 
 .last-straw-template .well h1 {
